Updated with pictures and more formatting

--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Google</title>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"
 	</head>
 
 	<body>
+		<div class="navbar">
+
+				<img id="nav_account"  src="account.png" />
+
+				<img class="nav_element" src="notifications.png" />
+			
+				<img class="nav_element" src="9box.png" />
+
+				<a class="nav_link nav_element" href="https://www.google.com/imghp?hl=en&tab=wi&ei=2olrV7vwIY_ejwOc5YXwCw&ved=0EKouCA4oAQ">Images</a>
+
+				<a class="nav_link nav_element"href="https://mail.google.com/mail/?tab=wm">Mail</a>				
+								
+		</div>
+
+		<div id="logo">
+			<div id="logo">
+				<img src="google.png" />
+			</div>
+
+		</div>
+		<div>
+			<form>
+				<input id="search_bar" type="text">
+				<input type="submit" value="Google Search">
+				<input type="submit" value="Im feeling lucky"
+			</form>
+		</div>
+		<div id="footer">
+
+		</div>
 
 	</body>
 
